// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card快照测试 海拔为0的Card 1`] = `
<div
  className="Paper-t0j6j6-0 Card__StyledCard-zr26b8-0 ikxNNz sinoui-card"
  elevation={0}
  tabIndex="0"
>
  文本
</div>
`;

exports[`Card快照测试 边框模式Card 1`] = `
<div
  className="Paper-t0j6j6-0 Card__StyledCard-zr26b8-0 bCnXtq sinoui-card sinoui-card--outlined"
  tabIndex="0"
>
  文本
</div>
`;

exports[`Card快照测试 默认(海拔为1的Card) 1`] = `
<div
  className="Paper-t0j6j6-0 Card__StyledCard-zr26b8-0 cxAjmQ sinoui-card"
  tabIndex="0"
>
  文本
</div>
`;
